# hpffp

./: #list_applicative.hs#  .gitignore  README.md  hie.yaml  httpstuff.hs  list_applicative.hs  maybemonad.hs  stack.yaml  twe.hs
.stack-work/: stack.sqlite3
Ciphers/: Ciphers.cabal
Ciphers/exe/: Main.hs
Ciphers/src/: CipherLib.hs  CipherLib.hs~
Reader/: reader.hs
addition/: Addition.hs  Addition.hs~  addition.cabal
exercises/: ##list_applicative.hs##  #Ch14.hs#  Apl1.hs  BadMonoid.hs  Ch10.hs  Ch10ex.hs  Ch11.hs  Ch11ex.hs  Ch12ex.hs  Ch13ex.hs  Ch14.hs  Ch15.hs  Ch15ex.hs  Ch16.hs  Ch16ex.hs  Ch17.hs  Ch17ex.hs  Ch18ex.hs  Ch20ex.hs  Ch21ex.hs  Ch9ex.hs  Constant_Ch17.hs  Constant_Ch17.hs~  ListApplicative.hs  ListApplicative.hs~  PoemLines.hs  WordNumber.hs  WordNumberTest.hs  abs.hs  area.hs  ch11_binary_tree.hs  ch4ex.hs  ch5.hs  ch5ex.hs  ch6ex.hs  ch7.hs  ch8ex.hs  ch9.hs  exercises.cabal  guard_experiment.hs  (+5 more)
hangman/: hangman.cabal
hangman/src/: Main.hs
hello/: hello.cabal
hello/src/: DogsRule.hs  Hello.hs
morse/: morse.cabal
morse/src/: Main.hs  Morse.hs
morse/tests/: tests.hs  tests.hs~
