name:                Ciphers
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Peter Dragos
maintainer:          dragospe@protonmail.com
copyright:           2021 Peter Dragos
category:            CLI
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library 
  hs-source-dirs:      src
  exposed-modules:     CipherLib
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable Ciphers
  hs-source-dirs:       exe
  main-is:              Main.hs
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , Ciphers
